--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body{
 }
 
 .cabecalho{
-    background-color: darkorchid;
-    color: rgb(0, 0, 0);
+    background-color: rgb(147, 2, 160);
+    color: rgb(255, 255, 255);
 display: flex;
 justify-content: space-around;
 align-items: center;
@@ -25,4 +25,25 @@ padding: 24px 0;
     display: inline-block;
     margin: 0 16px;
     font-size: 24px;
+}
+
+.escola-imagem{
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(rgb(0, 0, 0), rgb(147, 2, 160));
+    color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0%;
+}
+
+.escola-div-conteudo{
+    width: 35%;
+}
+
+.escolatitulo{
+    padding: 24px 0;
 }
