--- a/style.css
+++ b/style.css
@@ -47,3 +47,23 @@ padding: 24px 0;
 .escolatitulo{
     padding: 24px 0;
 }
+
+.estudante-icone{
+    width: 50px;
+    padding: 4px 8px;
+}
+
+.estudante-div{
+    text-align: center;
+    padding: 16px 0;
+}
+
+.estudante-imagem{
+    width: 150px;
+    height: px;
+}
+
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
